tarorpc + rpc: implement DecodeProof methods and update VerifyProof
tarorpc: create DecodeProofRequest and DecodeProofResponse objects
rpc: Implement DecodeProof + include into VerifyProof
